feat: create files

--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,6 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
@@ -142,7 +141,7 @@
                 <configuration>
                     <environmentVariables>
                         <!-- Default config for vanilla install of a local postgresql -->
-                        <SPRING_DATASOURCE_URL>jdbc:postgresql://localhost:5432/postgres</SPRING_DATASOURCE_URL>
+                        <SPRING_DATASOURCE_URL>jdbc:postgresql://db:5432/postgres</SPRING_DATASOURCE_URL>
                         <SPRING_DATASOURCE_USERNAME>postgres</SPRING_DATASOURCE_USERNAME>
                         <SPRING_DATASOURCE_PASSWORD>password</SPRING_DATASOURCE_PASSWORD>
                         <SPRING_JPA_HIBERNATE_DDL_AUTO>update</SPRING_JPA_HIBERNATE_DDL_AUTO>
