--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+management.endpoints.web.exposure.include=info,health,metrics,prometheus
+management.endpoint.info.access=UNRESTRICTED
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
+management.endpoint.metrics.access=UNRESTRICTED
+management.endpoint.prometheus.access=UNRESTRICTED
 spring.application.name=dependency-manager-api
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
