--- a/dev-station/docker-compose.yml
+++ b/dev-station/docker-compose.yml
@@ -1,9 +1,33 @@
+version: "3.8"
 services:
   db:
-    image: postgres
-    container_name: "local_postgres"
+    image: postgres:14
+    container_name: dependency_manager_api_db_container
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: postgres
     ports:
       - "5432:5432"
-    restart: always
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  app:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    container_name: dependency_manager_api_container
     environment:
-      POSTGRES_PASSWORD: password
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_DATABASE: POSTGRESQL
+      LOGGING_CONFIG: logback.xml
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+
+volumes:
+  pgdata:
