fix: pom and app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 management.endpoints.web.exposure.include=info,health,metrics,prometheus
-management.endpoint.info.access=UNRESTRICTED
+management.endpoint.info.enabled=true
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
-management.endpoint.metrics.access=UNRESTRICTED
-management.endpoint.prometheus.access=UNRESTRICTED
-spring.application.name=dependency-manager-api
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+spring.application.name=Dependency Manager Api
