fix: add DataSource Url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
+# Utilisateur et mot de passe
+spring.datasource.username=user
+spring.datasource.password=password
+
+# Spécifier le driver JDBC
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Le dialecte SQL de PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Activer ou désactiver la création automatique des schémas de base de données (facultatif)
+spring.jpa.hibernate.ddl-auto=update
+
 management.endpoints.web.exposure.include=info,health,metrics,prometheus
 management.endpoint.info.enabled=true
 management.endpoint.health.show-details=always
