--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+
 # Utilisateur et mot de passe
 spring.datasource.username=user
 spring.datasource.password=password
