--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,11 @@
 <!--            <version>3.23.1</version>-->
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>7.1.0.202411261347-r</version>
+        </dependency>
     </dependencies>
 
     <build>
