--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 HELP.md
 target/
+dev-station/
+docker-compose/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 .env
+/src/main/resources/jwt/
 
 ### STS ###
 .apt_generated
