--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ management.health.db.enabled=true
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 spring.application.name=Dependency Manager Api
+
+# Jwt 
+security.jwt.secret-key=classpath:jwt/hs512.key
+security.jwt.expiration-time=3600000
+security.jwt.ttl=15m
