config: add private token and update dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,11 @@ spring.application.name=Dependency Manager Api
 security.jwt.secret-key=classpath:jwt/hs512.key
 security.jwt.expiration-time=3600000
 security.jwt.ttl=15m
+
+# Tokens
+encryption.githubToken=classpath:tokens/github.token
+encryption.gitlabToken=classpath:tokens/gitlab.token
+
+# URLs
+github.api.url=https://api.github.com
+gitlab.api.url=https://gitlab.com
