--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ encryption.gitlabToken=classpath:tokens/gitlab.token
 # URLs
 github.api.url=https://api.github.com
 gitlab.api.url=https://gitlab.com
+
+# Scheduler
+# Run every day at 2 am
+dependency.update.schedule.cron=0 0 2 * * ?
+
