fix: delete spring.datasource infos to avoid conflicts with docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
-
-# Utilisateur et mot de passe
-spring.datasource.username=user
-spring.datasource.password=password
-
 # Spécifier le driver JDBC
-spring.datasource.driver-class-name=org.postgresql.Driver
+0spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Le dialecte SQL de PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
