--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,11 @@
             <artifactId>gitlab4j-api</artifactId>
             <version>6.0.0-rc.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
