fix: switch app variables to ENV

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,13 +16,13 @@ management.endpoint.prometheus.enabled=true
 spring.application.name=Dependency Manager Api
 
 # Jwt 
-security.jwt.secret-key=classpath:jwt/hs512.key
-security.jwt.expiration-time=3600000
-security.jwt.ttl=15m
+security.jwt.secret-key=${JWT_SECRET_KEY}
+security.jwt.expiration-time=${JWT_EXPIRATION_TIME:3600000}
+security.jwt.ttl=${JWT_TTL:15m}
 
 # Tokens
-encryption.githubToken=classpath:tokens/github.token
-encryption.gitlabToken=classpath:tokens/gitlab.token
+encryption.githubToken=${GITHUB_TOKEN}
+encryption.gitlabToken=${GITLAB_TOKEN}
 
 # URLs
 github.api.url=https://api.github.com
@@ -30,5 +30,5 @@ gitlab.api.url=https://gitlab.com
 
 # Scheduler
 # Run every day at 2 am
-dependency.update.schedule.cron=0 0 2 * * ?
+dependency.update.schedule.cron=${DEPENDENCY_UPDATE_SCHEDULE_CRON:0 0 2 * * ?}
 
